@@ -1,3 +1,6 @@
+(Mark Diggory)
+- New options for ItemImporter to support bitstream permissions and descriptions.
+
 (Graham Triggs/Mark Diggory)
 - S.F. Bug 1824710 Creative Commons RDF has changed. Adjusted CC processing to be XSL driven 
   and adjusted generated XML/RDF. Created LicenseCleanup CLI to process existing CC license_rdf
